# xfs2json

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
src/: args.c  args.h  main.c
src/util/: binary_reader.c  binary_reader.h  binary_writer.c  binary_writer.h
src/xfs/: common.h  convert.c  convert.h  converter.c  converter.h  prop_types.h  xfs.c  xfs.h  xfs_json.c
src/xfs/v15/: arch_64.c  arch_64.h
src/xfs/v16/: arch_32.c  arch_32.h
